# metabridge-hub

./: .env.example  .env.mainnet.example  .env.testnet.example  COMPILATION_TEST_REPORT.md  DIGITALOCEAN_DEPLOYMENT.md  Dockerfile  GRANT_OPPORTUNITIES.md  Makefile  QUICKSTART.md  README.md  STARTUP.md  SYSTEMD_TROUBLESHOOTING.md  WHITEPAPER.md  check-services.sh  deploy-digitalocean.sh  deploy-mainnet.sh  deploy-testnet.sh  docker-compose.testnet.yaml  fix-all.sh  fix-postgresql-auth.sh  go.mod  go.sum  reset-database.sh  security-audit.template  show-errors.sh  start-all.sh  stop-mainnet.sh  stop-testnet.sh  test-e2e-full.sh
Documentations/: BUILD_VERIFICATION.md  COMPILATION_STATUS.md  COMPILATION_TEST_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_DIAGNOSIS.md  GRANT_OPPORTUNITIES.md  PDF_CONVERSION_INSTRUCTIONS.md  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  WHITEPAPER.md
cmd/api/: main.go
config/: config.mainnet.yaml  config.production.yaml  config.testnet.yaml
contracts/near/: Cargo.toml  README.md
contracts/near/src/: events.rs
contracts/solana/programs/solana-bridge/: Cargo.toml
frontend/: .env.example  README.md  index.html  start-frontend.sh
postman/: Metabridge_API.postman_collection.json  Metabridge_Local.postman_environment.json
scripts/: check-dependencies.sh  cross-chain-transfer.js  fix-deployment.sh  fix-redis.sh  install-dependencies.sh  quick-setup.sh  start-dependencies.sh
systemd/: articium-api.service  articium-batcher.service  articium-listener.service  articium-relayer.service  metabridge-batcher.service  metabridge-listener.service
(+99 files in other folders)
