[package]
name = "near-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Articium Team"]
description = "NEAR Bridge Contract for Articium Engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.2.0"

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
near-workspaces = "0.10.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.release.package.near-bridge]
codegen-units = 1
opt-level = "z"
