[package]
name = "solana-bridge"
version = "0.1.0"
description = "Articium Engine Solana Bridge Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
